--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 		</div>
 	</header>
 
-	<main>
+	<main id="mainContent">
 		<section class="categories" id="categories">
 			<div class="wrapper">
 				<h2>Categories</h2>
