--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 				<img src="./assets/menu-button.svg" alt="open slide-out navigation" class="menuIcon">
 			</button>
 
+			<!-- Homepage will not be linked to avoid needless page refresh -->
 			<a href="#" class="logo">
 				<h1>Toybox</h1>
 			</a>
@@ -33,11 +34,11 @@
 
 				<div class="counter">
 					<p class="smallCopy">0</p>
-				</div> <!-- .counter END -->
-			</div> <!-- .searchCart END -->
+				</div> 
+			</div> 
 
-		</div> <!-- .wrapper END -->
-	</nav> <!-- .navBar END -->
+		</div> 
+	</nav> 
     
 	<header>
 		<div class="headerImgContainer wrapper">
@@ -50,7 +51,7 @@
 				<h3>Go on, let them play with wooden blocks.</h3>
 				<p>Sed gravida eu ac aliquam pellentesque pharetra pharetra. Augue nam facilisis tristique turpis iaculis pulvinar
 					tellus.</p>
-				<a class="button">Shop All</a>
+				<a href="./shop.html" class="button">Shop All</a>
 			</div>
 		</div>
 	</header>
@@ -89,9 +90,9 @@
 							<p>Act Quickly and Grab These Bargains</p>
 						</a>
 					</li>
-				</ul> <!-- .categoryGallery END-->
-			</div> <!-- .wrapper END-->
-		</section> <!-- .categories END-->
+				</ul> 
+			</div>
+		</section> 
 	</main>
 
 	<footer id="footer">
@@ -104,6 +105,7 @@
 					<nav>
 						<ul class="footerShop">
 							<li>
+								<!-- discuss with designer whether nav menu headings should be links -->
 								<h5>Shop</h5>
 							</li>
 							<li>
@@ -154,9 +156,9 @@
 							</li>
 						</ul>
 					</nav>
-				</div> <!-- .footerNav END -->
-			</div> <!-- .footerFlexContainer END-->
-		</div> <!-- .wrapper END-->
+				</div> 
+			</div> 
+		</div>
 	</footer>
 
 </body>
