--- a/shop.html
+++ b/shop.html
@@ -38,7 +38,7 @@
         </div> 
     </nav> 
 
-    <main id="productsMainContent">
+    <main id="productsMainContent" class="productsMainContent">
         <section class="allProducts">
             <div class="wrapper">
                 <h2>All Products</h2>
@@ -47,6 +47,7 @@
                         <a href="">
                             <img src="./assets/safari-trio.jpg" alt="Hand-carved safari animal toys">
                             <!-- PLSFIXTHIS: popularProduct <p> should perhaps be updated to be an h3 -->
+                                <!-- if element remains a <p> tag, nest <strong> element within the paragraphs -->
                             <p class="popularProduct">Safari Trio</p>
                             <p class="price">$49.00USD</p>
                         </a>
